# fast-ta

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  README.md  WORKSPACE  readme.md  requirements-core.txt  requirements-test.txt  run.sh  setup.py  setup_custom_arch.py  setup_profile.py  test.sh
.github/ISSUE_TEMPLATE/: bug_report.md
benchmarks/: adi.py  ao.py  atr.py  bol.py  cmf.py  dc.py  emv.py  fi.py  kama.py  kc.py  mfi.py  nvi.py  obv.py  roc.py  rsi.py  stoch.py  throughput.py  throughput_fast_ta.py  tsi.py  uo.py  vpt.py  vwap.py  wr.py
benchmarks-no-opts/: ao.py  kama.py  roc.py  rsi.py  run_all.sh  stoch.py  tsi.py  uo.py
benchmarks/results/: throughput.csv  throughput_fast_ta.csv
changelogs/: CHANGELOG.md
ci/: benchmark_linux.sh  run_tests_linux.sh  run_tests_osx.sh  setup_environment_linux.sh  setup_environment_osx.sh  upload_codecov_linux.sh  upload_codecov_osx.sh
docs/source/: conf.py  index.rst
docs/source/api/: momentum.rst  volatility.rst  volume.rst
docs/source/contributing/: testing.rst
docs/source/misc/: install.rst  license.rst
fast_ta/: __init__.py  setup.py
fast_ta/src/: 2darray.c  2darray.h  BUILD  CMakeLists.txt  SPEC.md  array_pair.h  core.c  debug_tools.c  debug_tools.h  error_methods.c  error_methods.h  funcs.c  funcs.h  generic_simd.c  generic_simd.h  momentum.c  momentum_backend.c  momentum_backend.h  momentum_backend.test.cpp  momentum_backend_args.h  parallel_momentum_backend.c  parallel_momentum_backend.h  test.cpp  testing_common.h  volatility.c  volatility_backend.c  volatility_backend.h  volatility_backend.test.cpp  volume.c  volume_backend.c  volume_backend.h  volume_backend.test.cpp
fast_ta/src/core/: core_backend.c  core_backend.h
fast_ta/src/funcs/: funcs.c  funcs.h  funcs_unaligned.c  funcs_unaligned.h
fast_ta/src/momentum/: momentum_backend.c  momentum_backend.h
fast_ta/src/test_data/: BUILD  adi_ref.txt  ao_ref.txt  atr_ref.txt  bolh_ref.txt  boll_ref.txt  bolm_ref.txt  cmf_ref.txt  dch_ref.txt  dcl_ref.txt  dcm_ref.txt  emv_ref.txt  emv_sma_ref.txt  fi_ref.txt  kama_ref.txt  kch_ref.txt  kcl_ref.txt  kcm_ref.txt  mfi_ref.txt  nvi_ref.txt  obv_ref.txt  roc_ref.txt  rsi_ref.txt  sample_close_data.txt  sample_high_data.txt  sample_low_data.txt  sample_open_data.txt  sample_volume_data.txt  stoch_ref.txt  stoch_signal_ref.txt  tsi_ref.txt  uo_ref.txt  vpt_ref.txt  vwap_ref.txt  wr_ref.txt
fast_ta/src/volatility/: volatility_backend.c
fast_ta/src/volume/: volume_backend.c  volume_backend.h
scripts/: find_includes.py
tests/: .~lock.AAPL_small.csv#  AAPL.csv  AAPL_small.csv  BUILD  cw_tests.py  data_parser.py  format.py  gen_test_data.cpp  tests.py
